src/objects/WGUFEToDoByProgram__c.object
<CustomObject>
    <description>Object to associate specific degree program codes with WGU FE ToDo templates for Student completion</description>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <description>Degree Program Code from Contact</description>
        <label>Program Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUFEToDo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to To Do item</description>
        <label>WGU FE ToDo</label>
        <referenceTo>WGUFEToDo__c</referenceTo>
        <relationshipLabel>WGU FE ToDos By Programs</relationshipLabel>
        <relationshipName>WGUFEToDosByPrograms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WGU FE ToDo By Program</label>
    <nameField>
        <label>WGU FE ToDo By Program Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WGU FE ToDos By Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>